created new branch

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div class="icon">
                     <img src="" alt="" class="weather-icon">
                 </div>
+                <div class="container-info">
                 <div class="location">
                     <div class="time">12:30pm</div>
                     <div class="city">Los Angeles, CA</div>
@@ -29,6 +30,7 @@
                 <div class="current">
                     <div class="temp">Temp: 25<span>&deg Celcius</span></div>
                     <div class="weather-description">Sunny</div>
+                </div>
                 </div>
             </div>
         </section>
